# voxel-engine

./: .gitignore  Cargo.toml  combine.sh
src/: app.rs  main.rs
src/helper/: debug_gizmos.rs  egui_dock.rs  large_transform.rs  mod.rs
src/plugins/: camera_plugin.rs  environment_plugin.rs  large_transform_plugin.rs  mod.rs  ui_plugin.rs
src/systems/: camera_system.rs  environment_system.rs  mod.rs  ui_system.rs
src/systems/voxels/: debug.rs  helper.rs  octree.rs  rendering.rs  structure.rs
