[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["jpeg", "trace_tracy", "trace_tracy_memory"] }
bevy_egui = "0.31.1"
bevy_asset = "0.15.0"
bevy-inspector-egui = "0.28.0"
bevy_reflect = "0.15.0"
bevy_render = "0.15.0"
bevy_window = "0.15.0"
egui_dock = "0.14.0"
bytemuck = "1.13"
bevy_mod_debugdump = "0.12.1"
log = "0.4.25"